--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -5,13 +5,23 @@
   line-height: 1.5;
   font-weight: 400;
 }
-body{
+body {
   padding: 0;
   margin: 0;
 }
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
-.app-container{
+.app-container {
   padding: 20px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
 }
